--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-/conjunto2.txt
 /conjunto_1.txt
+/conjunto_2.txt
+/conjunto_3.txt
+/conjunto_4.txt
+/conjunto_5.txt
+/conjunto_6.txt
+/conjunto_7.txt
+/conjunto_8_1.txt
+/conjunto_8_2.txt
+/lista_tendencias_1.txt
+/lista_tendencias_2.txt
+/twitter_json.png
+/user_1_json.png
+/user_2_json.png
+/links_utiles_python.pdf
